--- a/project/core/templates/core/about.html
+++ b/project/core/templates/core/about.html
@@ -1,10 +1,6 @@
-<h1> Web Personal</h1>
-<ul>
-    <li><a href="/home/"> Portada </a></li>
-    <li><a href="/about/"> Acerca de </a></li>
-    <li><a href="/portfolio/"> Portafolio </a></li>
-    <li><a href="/contact/"> Contacto </a></li>
-</ul>
+{% extends 'core/base.html' %}
 
+{% block content %}
 <h2>ACERCA DE</h2>
 <p>Me llamo Ever.</p>
+{% endblock %}
