--- a/project/core/templates/core/contact.html
+++ b/project/core/templates/core/contact.html
@@ -1,10 +1,7 @@
-<h1> Web Personal</h1>
-<ul>
-    <li><a href="/home/"> Portada </a></li>
-    <li><a href="/about/"> Acerca de </a></li>
-    <li><a href="/portfolio/"> Portafolio </a></li>
-    <li><a href="/contact/"> Contacto </a></li>
-</ul>
+{% extends 'core/base.html' %}
 
+{% block content %}
 <h2>CONTACTO</h2>
-<p><a href="mailto:ruizdiaz.oe@gmail.com">Escribime aca.</a></p>
+<style type="text/css">a {text-decoration:none}</style>
+<p><a href="mailto:ruizdiaz.oe@gmail.com">Clickea aqui.</a></p>
+{% endblock %}
