--- a/project/core/templates/core/portfolio.html
+++ b/project/core/templates/core/portfolio.html
@@ -1,11 +1,8 @@
-<h1> Web Personal</h1>
-<ul>
-    <li><a href="/home/"> Portada </a></li>
-    <li><a href="/about/"> Acerca de </a></li>
-    <li><a href="/portfolio/"> Portafolio </a></li>
-    <li><a href="/contact/"> Contacto </a></li>
-</ul>
+{% extends 'core/base.html' %}
 
-
+{% block content %}
 <h2>PORTFOLIO</h2>
 <p>Soy estudiante de desarrollo web.</p>
+{% endblock %}
+
+
