--- a/project/core/templates/core/base.html
+++ b/project/core/templates/core/base.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <style type="text/css">a {text-decoration:none}</style>
     <h1> Web Personal</h1>
     <ul>
         <li><a href="/home/"> Portada </a></li>
