--- a/project/core/templates/core/about.html
+++ b/project/core/templates/core/about.html
@@ -1,5 +1,7 @@
 {% extends 'core/base.html' %}
 
+{% block title %}About{% endblock %}
+
 {% block content %}
 <h2>ACERCA DE</h2>
 <p>Me llamo Ever.</p>
