--- a/project/core/templates/core/contact.html
+++ b/project/core/templates/core/contact.html
@@ -1,5 +1,7 @@
 {% extends 'core/base.html' %}
 
+{% block title %}Contact{% endblock %}
+
 {% block content %}
 <h2>CONTACTO</h2>
 <p><a href="mailto:ruizdiaz.oe@gmail.com">Clickea aqui.</a></p>
