--- a/project/core/templates/core/home.html
+++ b/project/core/templates/core/home.html
@@ -1,5 +1,7 @@
 {% extends 'core/base.html' %}
 
+{% block title %}Home{% endblock %}
+
 {% block content %}
 <h2>BIENVENIDOS</h2>
 <p>A una clase de Django.</p>
