--- a/project/core/templates/core/portfolio.html
+++ b/project/core/templates/core/portfolio.html
@@ -1,5 +1,7 @@
 {% extends 'core/base.html' %}
 
+{% block title %}Portafolio{% endblock %}
+
 {% block content %}
 <h2>PORTFOLIO</h2>
 <p>Soy estudiante de desarrollo web.</p>
