--- a/project/core/templates/core/home.html
+++ b/project/core/templates/core/home.html
@@ -1,9 +1,15 @@
 {% extends 'core/base.html' %}
+{% load static %}
+
+
+
 
 {% block title %}Home{% endblock %}
 
-{% block content %}
-<h2>BIENVENIDOS</h2>
-<p>A una clase de Django.</p>
+{% block background %}{% static 'core/img/home-bg.jpg' %}{% endblock %}
+
+{% block headers %}
+    <h1>Ever Ruiz Diaz</h1>
+    <span class="subheading">Estudiante de Software</span>
 {% endblock %}
 
