--- a/project/core/templates/core/base.html
+++ b/project/core/templates/core/base.html
@@ -5,17 +5,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% load static %}
-
     <title>{% block title %} {% endblock %} | Ever Toujours</title>
-
     <!-- Estilos y fuentes del template  -->
     <link href="{% static 'core/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'core/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic'" rel='stylesheet'type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic'" rel='stylesheet'
+        type='text/css'>
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
+        rel='stylesheet' type='text/css'>
     <link href="{% static 'core/css/clean-blog.min.css' %}" rel="stylesheet">
 </head>
-
 
 <body>
     <!-- Navegación -->
@@ -47,7 +47,6 @@
         </div>
     </nav>
 
-
     <!-- Cabecera -->
     <header class="masthead" style="background-image: url('{% block background %} {% endblock %}')">
         <div class="overlay"></div>
@@ -55,18 +54,21 @@
             <div class="row">
                 <div class="col-lg-8 col-md-10 mx-auto">
                     <div class="site-heading">
-                    {% block headers %}{% endblock %}
+                        {% block headers %}{% endblock %}
                     </div>
                 </div>
             </div>
         </div>
     </header>
 
-
     <!-- Contenido -->
-    {% block content %}
-
-    {% endblock %}
+    <div class="container">
+        {% block content %} {% endblock %}
+    </div>
+    
+{% if request.path != '/home/' %}
+    <hr>
+{% endif %}
 
 
     <!-- Pié de página -->
@@ -100,17 +102,16 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; 2018 · Ever Ruiz Diaz, todos los derechos reservados.</p>
+                    <p class="copyright text-muted">Copyright &copy; 2018 · Ever Ruiz Diaz, todos los derechos
+                        reservados.</p>
                 </div>
             </div>
         </div>
     </footer>
 
-
     <!-- Bootstrap y Javascripts -->
     <script src="{% static 'core/vendor/jquery/jquery.min.js' %}"></script>
     <script src="{% static 'core/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'core/js/clean-blog.min.js' %}"></script>
-
 </body>
 </html>
