--- a/project/core/templates/core/contact.html
+++ b/project/core/templates/core/contact.html
@@ -1,8 +1,23 @@
 {% extends 'core/base.html' %}
+{% load static %}
 
 {% block title %}Contact{% endblock %}
+{% block background %}{% static 'core/img/contact-bg.jpg' %}{% endblock %}
+
+{% block headers %}
+<h1>Contacto</h1>
+<span class="subheading">Puedes encontrarme a travez de las redes.</span>
+{% endblock %}
 
 {% block content %}
-<h2>CONTACTO</h2>
-<p><a href="mailto:ruizdiaz.oe@gmail.com">Clickea aqui.</a></p>
-{% endblock %}
+<div class="row">
+    <div class="col-lg-8 col-md-10 mx-auto">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates
+            odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus
+            consectetur?</p>
+        <br>
+        <p><b>Teléfono:</b> +54 11 6851 9168</p>
+        <p><b>Honorarios:</b> 50 U$S/h (precio base)</p>
+    </div>
+</div>
+{% endblock %}.
